@@ -12,6 +12,7 @@
 [+] classe plxPlugin: ajout de la méthode delParam (contribution jormun)
 [+] plxShow::artChapo() : ajout du paramètre optionnel anchor (contribution jerrywham)
 [+] plxShow::staticInclude() : possibilité d'inclure une page statique à partir de son titre ou de son url
+[+] #78: Tri aléatoire des articles (random)
 BUG fix #77: fct artFeed: lien rss pour les catégories incomplet
 BUG fix #51: L'accès à l'écran d'administration des commentaires est impossible si les commentaires sont désactivés dans les paramètres de base de PluXml
 BUG Correction d'une possible auth-bypass (contribution jvoisin)
